# mecanum_bot

./: CMakeLists.txt  README.md  package.xml
config/: mecanum_controllers.yaml  slam_toolbox.yaml
launch/: mecanum_sim.launch.py  slam.launch.py
rviz/: mecanum.rviz
urdf/: mecanum_bot.urdf.xacro
worlds/: mecanum_world.sdf
