<?xml version="1.0"?>
<?xml-model href=""http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mecanum_bot</name>
  <version>0.1.0</version>
  <description>4-wheel mecanum drive ROS2 robot: Gazebo sim, LiDAR, RViz. teleop, SLAM</description>
    <maintainer email="aminahmedg2005@gmail.com">Amin Ahmed G</maintainer>
    <license>Apache-2.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>xacro</exec_depend>
    <exec_depend>ros_gz_sim</exec_depend>
    <exec_depend>ros_gz_bridge</exec_depend>
    <exec_depend>gz_ros2_control</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>mecanum_drive_controller</exec_depend>
    <exec_depend>joint_state_broadcaster</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>rviz_default_plugins</exec_depend>
    <exec_depend>teleop_twist_keyboard</exec_depend>
    <exec_depend>slam_toolbox</exec_depend>
    <exec_depend>nav2_map_server</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
